# uWASM

./: CMakeLists.txt  README.md
include/: leb128.h  uWASM.h
src/: uWASM.c
test/: main.c  test.wat
